--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "@supabase/supabase-js": "^2.48.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
